# Apitester

./: .gitignore  ApiTester.sln  ApiTester.vcxproj  ApiTester.vcxproj.filters  CMakeLists.txt  Qt5.props  README.md  VISUAL_STUDIO_BUILD_FIX.md  VisualStudio-Setup.md  build-cmake-vs.bat  build-cmake-vs.ps1  setup-qt.bat  setup-qt.ps1
resources/: resources.qrc
src/: CollectionManager.cpp  CollectionManager.h  CollectionModel.cpp  CollectionModel.h  ConfigManager.cpp  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h  HttpClient.cpp  HttpClient.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RequestModel.cpp  RequestModel.h  RequestPanel.cpp  RequestPanel.h  ResponsePanel.cpp  ResponsePanel.h  SettingsDialog.cpp  SettingsDialog.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TestExplorer.cpp  TestExplorer.h  TestRunner.cpp  TestRunner.h  ThemeManager.cpp  ThemeManager.h  UserManager.cpp  UserManager.h  main.cpp
